--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/inferno-design/codegasm-theme.git"
+    "url": "git+https://github.com/infernodesign/codegasm-theme.git"
   },
   "bugs": {
-    "url": "https://github.com/inferno-design/codegasm-theme/issues"
+    "url": "https://github.com/infernodesign/codegasm-theme/issues"
   },
   "keywords": [
     "theme",
@@ -29,9 +29,9 @@
   ],
   "icon": "icon.png",
   "engines": {
-    "vscode": "^1.96.0"
+    "vscode": "^1.99.0"
   },
-  "packageManager": "pnpm@10.6.1",
+  "packageManager": "pnpm@10.20.0",
   "contributes": {
     "themes": [
       {
@@ -48,38 +48,43 @@
   "scripts": {
     "build": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts --include './src/**/*.ts'",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --cache --cache-location node_modules/.cache/.eslintcache",
+    "lint:fix": "pnpm run lint --fix",
     "package": "vsce package --no-dependencies --out ./releases/ --no-yarn",
-    "prepublishOnly": "npm run build",
+    "prepare": "is-ci || lefthook install",
+    "prepublishOnly": "pnpm run build",
     "publish": "bumpp --all && vsce publish --no-dependencies",
-    "vscode:prepublish": "npm run build"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "vscode:prepublish": "pnpm run build"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@commitlint/format": "^19.8.0",
-    "@commitlint/types": "^19.8.0",
-    "@inferno-design/eslint-config": "^2.5.0",
-    "@inferno-design/typescript-config": "^1.7.0",
+    "@commitlint/cli": "^20.1.0",
+    "@infernodesign/commitlint-config": "^1.2.0",
+    "@infernodesign/eslint-config": "^1.9.0",
+    "@infernodesign/typescript-config": "^1.3.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.9",
+    "@types/node": "^24.9.2",
     "@types/tinycolor2": "^1.4.6",
-    "@types/vscode": "^1.96.0",
-    "@vscode/vsce": "^3.2.2",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
-    "fs-extra": "^11.3.0",
-    "ovsx": "^0.10.1",
-    "prettier": "^3.5.3",
+    "@types/vscode": "^1.99.0",
+    "@vscode/vsce": "^3.6.2",
+    "bumpp": "^10.3.1",
+    "eslint": "^9.39.0",
+    "fs-extra": "^11.3.2",
+    "is-ci": "^4.1.0",
+    "lefthook": "^2.0.2",
+    "markdownlint-cli2": "^0.18.1",
+    "ovsx": "^0.10.6",
+    "prettier": "^3.6.2",
+    "taze": "^19.9.0",
     "tinycolor2": "^1.6.0",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@vscode/vsce-sign",
-      "esbuild"
+      "esbuild",
+      "lefthook"
     ]
   }
 }
